--- a/package.json
+++ b/package.json
@@ -19,10 +19,12 @@
     "@angular/fire": "^6.0.2",
     "@angular/forms": "~10.0.11",
     "@angular/http": "^7.2.16",
+    "@angular/localize": "^10.0.11",
     "@angular/material": "^10.1.3",
     "@angular/platform-browser": "~10.0.11",
     "@angular/platform-browser-dynamic": "~10.0.11",
     "@angular/router": "~10.0.11",
+    "@ngx-translate/core": "^13.0.0",
     "bootstrap": "^4.5.2",
     "firebase": "^7.19.0",
     "rxjs": "~6.5.5",
