--- a/package.json
+++ b/package.json
@@ -25,8 +25,12 @@
     "@angular/router": "~10.0.11",
     "@ng-bootstrap/ng-bootstrap": "^7.0.0",
     "bootstrap": "^4.5.2",
+    "chart.js": "^2.9.3",
+    "date-fns": "^2.15.0",
     "firebase": "^7.19.0",
     "jquery": "^3.5.1",
+    "moment": "^2.27.0",
+    "ng2-charts": "^2.4.0",
     "rxjs": "~6.5.5",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.3"
